--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -61,31 +61,31 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Bold:antialias=true;3"
+font-0 = "0xProto Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
 
 ; memory icon
-font-1 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
+font-1 = "Symbols Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
 
 ; cpu icon
-font-2 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
+font-2 = "Symbols Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
 
 ; keydbg icon
-font-3 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
+font-3 = "Symbols Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
 
 ; micvol icon
-font-4 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
+font-4 = "Symbols Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
 
 ; pulseaudio icon
-font-5 = "Symbols Nerd Font Mono:pixelsize=16:style=SemiBold:antialias=false;3"
+font-5 = "Symbols Nerd Font Mono:pixelsize=16:style=Regular:antialias=false;3"
 
 ; backlight icon
-font-6 = "Symbols Nerd Font Mono:pixelsize=14:style=SemiBold:antialias=false;3"
+font-6 = "Symbols Nerd Font Mono:pixelsize=14:style=Regular:antialias=false;3"
 
 ; battery icon
-font-7 = "Symbols Nerd Font Mono:pixelsize=16:style=SemiBold:antialias=false;3"
+font-7 = "Symbols Nerd Font Mono:pixelsize=16:style=Regular:antialias=false;3"
 
 ; pwmenu icon
-font-8 = "Symbols Nerd Font Mono:pixelsize=10:style=SemiBold:antialias=false;3"
+font-8 = "Symbols Nerd Font Mono:pixelsize=10:style=Regular:antialias=false;3"
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
