--- a/dot/.config/kitty/kitty.conf
+++ b/dot/.config/kitty/kitty.conf
@@ -31,10 +31,10 @@ enable_ligatures no
 disable_ligatures always
 font_features "FiraCode Nerd Font Mono" -calt
 box_drawing_scale 0.001, 1, 1.5, 2
-font_family      family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM-Regular
-bold_font        family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM-Regular
-italic_font      family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM-Regular
-bold_italic_font family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM-Regular
+font_family      family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM
+bold_font        family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM
+italic_font      family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM
+bold_italic_font family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM
 
 # --------------------------
 # Cursor Settings
@@ -42,9 +42,9 @@ bold_italic_font family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMono
 cursor_shape beam
 cursor_beam_thickness 2
 cursor_blink_interval 0
-cursor_trail 9
-cursor_trail_decay 0.1 0.3
-cursor_trail_start_threshold 0
+#cursor_trail 9
+#cursor_trail_decay 0.1 0.3
+#cursor_trail_start_threshold 0
 
 # --------------------------
 # Scrollback Settings
@@ -274,4 +274,14 @@ map f10 paste_from_buffer e
 # --------------------------
 include morecolors.conf
 include colors.conf
+
 #paste_actions none
+#
+#
+# -------------------------
+
+
+#font_family      family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
+#bold_font        family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
+#italic_font      family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
+#bold_italic_font family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
