--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -61,7 +61,7 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "0xProto Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
+font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=13:style=Regular:antialias=false;3"
 
 ; memory icon
 font-1 = "Symbols Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
