--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -126,7 +126,7 @@ bind b break-pane
 #Kill pane
 bind-key -n M-x confirm-before kill-pane
 bind-key -n M-w confirm-before kill-pane
-bind-key -n M-Y kill-pane
+bind-key -n M-W kill-pane
 
 #Zoom pane
 bind-key -n M-z resize-pane -Z
